--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -1,3 +1,7 @@
+/***********************************************************
+		    		CONTACT PAGE HEADER
+***********************************************************/
+
 .contactHeader {
     width: 100%;
     height: 90vh;
@@ -59,6 +63,10 @@
         }
     }
 }
+
+/***********************************************************
+		    		  CONTACT SECTION
+***********************************************************/
 
 .contactSection {
     width: 100%;
@@ -153,7 +161,7 @@
 
                 input[type="text"]:focus,
                 input[type="email"]:focus {
-                    border: 2px solid $accentColor;
+                    border: 5px solid $accentColor;
                 }
 
                 input::placeholder {
@@ -173,7 +181,7 @@
             }
 
             textarea:focus {
-                border: 2px solid $accentColor;
+                border: 5px solid $accentColor;
             }
 
             textarea::placeholder {
@@ -198,7 +206,7 @@ footer {
 }
 
 /***********************************************************
-		    		  MEDIA QUERIES
+		    	CONTACT PAGE MEDIA QUERIES
 ***********************************************************/
 
 @media (max-width: 1020px) {
