--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -1,3 +1,56 @@
+/***********************************************************
+		    		  BASE STYLES
+***********************************************************/
+
+h1, h2, h3, ul, li, p {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+}
+
+img {
+    width: 100%;
+    object-fit: contain;
+    display: block;
+}
+
+button {
+    padding: 10px 15px;
+    border: none;
+    background-color: $accentColor;
+    color: $secondaryColor;
+    font-family: 'Walter Turncoat', cursive;
+    font-size: 25.4px;
+    line-height: 41.6px;
+    text-align: center;
+    white-space: nowrap;
+}
+
+button:hover,
+button:focus {
+    background-color: $textColor;
+}
+
+button:active {
+    background-color: coral;
+}
+
+.mainWrapper {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+/***********************************************************
+		    		  MAIN HEADER
+***********************************************************/
+
 .mainHeader {
     width: 100%;
     height: 100vh;
@@ -65,7 +118,7 @@
 }
 
 /***********************************************************
-		    		  MEDIA QUERIES
+		    	MAIN HEADER MEDIA QUERIES
 ***********************************************************/
 
 @media (min-width: 1600px) {
