--- a/partials/_mainSection.scss
+++ b/partials/_mainSection.scss
@@ -1,3 +1,7 @@
+/***********************************************************
+		    		FOUR LINKS SECTION
+***********************************************************/
+
 .fourLinks {
     width: 100%;
     padding: 15% 0 5% 0;
@@ -49,6 +53,10 @@
         }
     }
 }
+
+/***********************************************************
+		    		QUADRANT SECTION
+***********************************************************/
 
 .quadrantSection {
     width: 100%;
@@ -125,6 +133,9 @@
     }
 }
 
+/***********************************************************
+		    		ROAD TRIP SECTION
+***********************************************************/
 
 .roadTripsSection {
     width: 100%;
@@ -162,6 +173,10 @@
     background-size: cover;
 }
 
+/***********************************************************
+		    		EVENTS SECTION
+***********************************************************/
+
 .eventsSection {
     width: 100%;
     background-color: $primaryColor;
@@ -197,6 +212,10 @@
     }
 }
 
+/***********************************************************
+		    		GALLERY SECTION
+***********************************************************/
+
 .gallerySection {
     width: 100%;
     padding: 5% 0;
@@ -225,7 +244,7 @@ footer {
 }
 
 /***********************************************************
-		    		  MEDIA QUERIES
+		    	  MAIN PAGE MEDIA QUERIES
 ***********************************************************/
 
 @media (max-width: 1250px) {
