--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -10,10 +10,12 @@
     background-size: cover;
     color: $textColor;
     
+    
     .mainWrapper {
         max-width: 90%;
         height: 100%;
         display: flex;
+        position: relative;
         
         
         .blogContent {
@@ -62,6 +64,10 @@
                 }
             }
         }
+    }
+
+    .hamburger {
+        @include hamburger;
     }
 }
 
@@ -423,20 +429,25 @@ footer {
 
 
 @media (max-width: 400px) {
-    .blogHeader .mainWrapper .blogContent {
-                .blogHeaderNav {
-                    ul {
-                        width: 100%;
-                        flex-wrap: wrap;
-
-                        li {
-                            width: 50%;
-                            text-align: center;
-                            margin-top: 5%;
-                        }
+    .blogHeader {
+        .mainWrapper {
+            .blogContent {
+                    .blogHeaderNav {
+                        display: none;
                     }
+
+                    .blogHeaderTitle {
+                        padding-top: 40%;
+                    }
+                    
                 }
             }
+
+            .hamburger {
+                display: block;
+            }
+    }
+        
     .commentsSection {
         form {
 
